tests/error/enum_errors/use_enum_class1.err
Error: Expected a value (at $FILE:12:8)
   | 
10 | @compile_guppy
11 | def fun() -> None:
12 |     x = MyEnum
   |         ^^^^^^ Expected a value, got a guppy enum class `MyEnum`

Help: You might use an enum variant here instead

Guppy compilation failed due to 1 previous error
